--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <fragment
-        android:id="@+id/navHostFragment1"
+        android:id="@+id/navHostFragmentLeft"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -24,10 +24,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph1" />
+        app:navGraph="@navigation/nav_graph_left" />
 
     <fragment
-        android:id="@+id/navHostFragment2"
+        android:id="@+id/navHostFragmentRight"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -36,6 +36,6 @@
         app:layout_constraintLeft_toRightOf="@id/guideline"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph2" />
+        app:navGraph="@navigation/nav_graph_right" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
