--- a/app/src/main/res/navigation/nav_graph_left.xml
+++ b/app/src/main/res/navigation/nav_graph_left.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/phoneNavGraph"
+    android:id="@+id/leftNavGraph"
     app:startDestination="@+id/navigation_home">
 
     <fragment
