--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -5,7 +5,7 @@
     android:id="@+id/errorFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.navigation.MainActivity">
+    tools:context=".ui.navigation.NavigationActivity">
 
     <TextView
         android:id="@+id/message"
