--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.detail.DetailActivity">
 
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/detailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Content details"
