testing new single pane/dual pane system

--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -4,10 +4,10 @@
     android:id="@+id/homeFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.items.ItemListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homeRecycler"
+        android:id="@+id/itemsRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
